<resources>
    <string name="app_name">Fresher Guide</string>
    <string name="clubs_and_societies">Clubs and societies</string>
    <string name="student_welfare_gro_up">Student Welfare Gro up</string>
    <string name="swgNew">Student Welfare Group</string>
    <string name="Sudy_Material">Study Material</string>
    <string name="Study_Material">Study_Material</string>
    <string name="study_material">Study Material</string>
    <string name="delete">DELETE</string>
    <string name="student_welfare_group_1">Student_Welfare_Group</string>
    <string name="ecell">Ecell</string>
    <string name="Ecell" />
    <string name="Ecelll">Ecell</string>
    <string name="entrepreneurship_cell">Entrepreneurship Cell</string>
    <string name="koss">KOSS</string>
    <string name="debating_society">Debating Society</string>
    <string name="student_welfare_group">Student Welfare Group</string>
    <string name="business_club">Business Club</string>
    <string name="todo">TODO</string>
    <string name="to_help_the_students_in_improving_their_skills_attitude_and_provide_resources">To help the students in improving their skills, attitude and provide resources</string>
    <string name="it_aims_to_promote_the_culture_of_debating_on_the_campus_and_provides_a_platform_to_bring_all_the_debaters_together">It aims to promote the culture of debating on the campus and provides a platform to bring all the debaters together.</string>
    <string name="fostering_the_spirit_of_entrepreneurship_in_order_to_create_a_self_reliant_india_helping_iit_kgp_start_ups_to_get_on_their_feet">Fostering the spirit of Entrepreneurship in order to create a Self-Reliant India,helping IIT KGp start-ups to get on their feet</string>
    <string name="a_group_of_coders_who_are_enthusiastic_about_the_open_source_movement_and_spreading_awareness_about_coding_and_foss_in_and_around_the_iit_kharagpur_campus">A group of Coders who are enthusiastic about the Open Source Movement and spreading awareness about coding and FOSS in and around the IIT Kharagpur campus.</string>
    <string name="SWG1">Student Welfare Group</string>
    <string name="fostering_the_spirit_of_entrepreneurship_in_order_to_create_a_self_reliant_india_by_helping_iit_kgp_start_ups_to_get_on_their_feet">Fostering the spirit of Entrepreneurship in order to create a Self-Reliant India by helping iit kgp start ups to get on their feet.</string>
    <string name="to_help_the_students_in_improving_their_skills_attitude_and_provide_xresources">“To help the students in improving their skills, attitude and provide resources.</string>
    <string name="title_activity_material2">Material2</string>
    <string name="tab_text_1">PHYSICS SEM</string>
    <string name="tab_text_2">CHEMISTRY SEM</string>
    <string name="physics_sem">PHYSICS SEM</string>
    <string name="title_activity_study_material">StudyMaterial</string>
    <string name="title_activity_tabbed">tabbed</string>
    <string name="title_activity_verynew">verynew</string>
    <string name="mechanics">MECHANICS</string>
    <string name="physics_of_waves">Physics Of Waves</string>
    <string name="evs">EVS</string>
    <string name="electrical_technology">Electrical Technology</string>
    <string name="pds">PDS</string>
    <string name="mathematics">MATHEMATICS</string>
    <string name="edcg">EDCG</string>
    <string name="english">ENGLISH</string>
    <string name="science_of_living_system">SCIENCE OF LIVING SYSTEM</string>
    <string name="chemistry">Chemistry</string>
    <string name="maths1">MATHEMATICS</string>
    <string name="studymaterial">Study Material</string>
    <string name="maths">Mathematics</string>
    <string name="maths2">Mathematics</string>
    <string name="clubs_and_societiesss">Clubs and Societies</string>
</resources>