<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/bg1"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_margin="8dp"
        app:cardElevation="200dp"
        app:cardCornerRadius="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
               android:id="@+id/imageView"
                android:src="@drawable/swg"
                android:contentDescription="@string/todo" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_toRightOf="@+id/imageView"
                android:layout_height="wrap_content"
                android:id="@+id/textView"
                android:text="@string/SWG1"
                android:textStyle="bold"
                style="@style/TextAppearance.AppCompat.Subhead"
                android:textSize="20sp"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_toRightOf="@+id/imageView"
                android:layout_toEndOf="@+id/imageView"
                android:layout_below="@+id/textView"
                android:layout_height="wrap_content"
                android:id="@+id/subText"
                android:text="@string/to_help_the_students_in_improving_their_skills_attitude_and_provide_xresources"
                android:textStyle="bold"
                android:textSize="15sp"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp" />
        </RelativeLayout>

    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_margin="8dp"
        app:cardElevation="8dp"
        app:cardCornerRadius="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
               android:id="@+id/imageView2"
                android:src="@drawable/ecell"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/imageView2"
                android:layout_toEndOf="@+id/imageView2"
                android:id="@+id/textView2"
                style="@style/TextAppearance.AppCompat"
                android:text="@string/entrepreneurship_cell"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_toRightOf="@+id/imageView2"
                android:layout_toEndOf="@+id/imageView2"
                android:layout_below="@+id/textView2"
                android:layout_height="wrap_content"
                android:id="@+id/subText2"
                android:text="@string/fostering_the_spirit_of_entrepreneurship_in_order_to_create_a_self_reliant_india_by_helping_iit_kgp_start_ups_to_get_on_their_feet"
                android:textStyle="bold"
                android:textSize="15sp"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp" />


        </RelativeLayout>

    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_margin="8dp"
        app:cardElevation="8dp"
        app:cardCornerRadius="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
               android:id="@+id/imageView3"
                android:src="@drawable/koss"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView3"
                android:text="@string/koss"
                android:layout_toRightOf="@+id/imageView3"
                android:layout_toEndOf="@+id/imageView3"
                style="@style/TextAppearance.AppCompat"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_toRightOf="@+id/imageView3"
                android:layout_toEndOf="@+id/imageView3"
                android:layout_below="@+id/textView3"
                android:layout_height="wrap_content"
                android:id="@+id/subText3"
                android:text="@string/a_group_of_coders_who_are_enthusiastic_about_the_open_source_movement_and_spreading_awareness_about_coding_and_foss_in_and_around_the_iit_kharagpur_campus"
                android:textStyle="bold"
                android:textSize="15sp"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp" />


        </RelativeLayout>

    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_margin="8dp"
        app:cardElevation="8dp"
        app:cardCornerRadius="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
               android:id="@+id/imageView4"
                android:src="@drawable/debsoc"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView4"
                android:layout_toRightOf="@+id/imageView4"
                android:layout_toEndOf="@+id/imageView4"
                android:text="@string/debating_society"
                android:textStyle="bold"
                android:textSize="20sp"
                style="@style/TextAppearance.AppCompat"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_toRightOf="@+id/imageView4"
                android:layout_toEndOf="@+id/imageView4"
                android:layout_below="@+id/textView4"
                android:layout_height="wrap_content"
                android:id="@+id/subText4"
                android:text="@string/it_aims_to_promote_the_culture_of_debating_on_the_campus_and_provides_a_platform_to_bring_all_the_debaters_together"
                android:textStyle="bold"
                android:textSize="15sp"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp" />


        </RelativeLayout>

    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_margin="8dp"
        app:cardElevation="8dp"
        app:cardCornerRadius="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
               android:id="@+id/imageView5"
                android:src="@drawable/bclub"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView5"
                android:text="@string/business_club"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@+id/imageView5"
                android:layout_toEndOf="@+id/imageView5"
                style="@style/TextAppearance.AppCompat"
                android:layout_marginStart="10dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_toRightOf="@+id/imageView5"
                android:layout_toEndOf="@+id/imageView5"
                android:layout_below="@+id/textView5"
                android:layout_height="wrap_content"
                android:id="@+id/subText5"
                android:text="Business Club is IIT Kharagpur's in campus society for all things business.The club, officially under the Technology Students’ Gymkhana, has three wings, namely Consultancy, Finance and Data Analytics."
                android:textStyle="bold"
                android:textSize="15sp"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp" />


        </RelativeLayout>

    </androidx.cardview.widget.CardView>


</LinearLayout>